--- a/TODO
+++ b/TODO
@@ -1,2 +1,6 @@
 [Tests]
   [ ] Test choose methods
+
+[Refactoring]
+  [ ] Remove _self
+  [ ] Modify ContextTree's contructor. It doesn't need the alphabet_size parameter
