--- a/TODO
+++ b/TODO
@@ -1,6 +1,11 @@
 [Refactoring]
     [ ] Remove _self.
     [ ] Remove 'alphabet_size' param from ContextTree's contructor.
+    [ ] Remove duplications of benchmark's helper functions.
 
 [Tests]
     [ ] Choose methods to be tested.
+    [ ] Improve tests
+
+[Benchmarks]
+    [ ] Improve benchmarks
