--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 [Refactoring]
   [ ] Almost all functions are virtual. Verify if it is necessary
   [x] Remove _self
-  [ ] Remove 'alphabet_size' param from ContextTree's contructor
+  [x] Remove 'alphabet_size' param from ContextTree's contructor
   [x] Remove duplications of benchmark's helper functions
   [ ] Prefix sum array can't be parallelized
 
