--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
   [ ] DiscreteIIDModel::SmoothedHistogramStanke
   [ ] DiscreteIIDModel::trainSmoothedHistogramBurge
   [ ] DiscreteIIDModel::trainSmoothedHistogramKernelDensity
+  [ ] Check training methods of IID and PhasedRunLengthDistribution
 
 [Tests]
   [ ] Choose methods to be tested.
