Test PhasedIMC's training algorithm

--- a/TODO
+++ b/TODO
@@ -19,8 +19,8 @@
 
 [Tests]
   [ ] Test random functions like choose()
-  [ ] Test training methods of VLMC
-  [ ] Test training methods of IMC
+  [x] Test training methods of VLMC
+  [ ] Test training methods of IMC (sometimes they pass... sometimes they don't pass)
 
 [Benchmarks]
   [ ] Improve benchmarks
