--- a/TODO
+++ b/TODO
@@ -12,6 +12,7 @@
   [ ] Declare overriding function 'override'
   [ ] Use unique_ptr as default pointer type
   [ ] Add phased evaliate version of IMC, PhasedIMC and MultipleSequentialModel
+  [ ] Fix HMM's Baum Welch algorithm
   [x] Copy DiscreteIIDModel::SmoothedHistogramStanke
   [x] Copy DiscreteIIDModel::trainSmoothedHistogramBurge
   [x] Copy DiscreteIIDModel::trainSmoothedHistogramKernelDensity
