--- a/TODO
+++ b/TODO
@@ -5,14 +5,14 @@
   [ ] Prefix sum array can't be parallelized. Should we use a decorator?
   [ ] Implement FixedSequenceAtPosition::prefix_sum_array
   [ ] Almost all functions are virtual. Verify if it is necessary
-  [ ] Should we add a "phased evaluate" method?
   [ ] Should ProfileHMM be a HMM?
   [ ] Change PhasedIMC's class name
   [ ] Check if band_den_bin is correct
   [ ] Declare overriding function 'override'
   [ ] Use unique_ptr as default pointer type
-  [ ] Add phased evaliate version of IMC, PhasedIMC and MultipleSequentialModel
-  [ ] Fix HMM's Baum Welch algorithm
+  [ ] Add phased evaluate version of IMC, PhasedIMC and MultipleSequentialModel
+  [ ] Fix HMM's Baum-Welch algorithm
+  [x] Should we add a "phased evaluate" method?
   [x] Copy DiscreteIIDModel::SmoothedHistogramStanke
   [x] Copy DiscreteIIDModel::trainSmoothedHistogramBurge
   [x] Copy DiscreteIIDModel::trainSmoothedHistogramKernelDensity
