Add inhomogeneous method.
But I think we should remove it...

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 [Refactoring]
+  [ ] Remove inhomogeneous() method
   [ ] Implements bayes-classifier app
   [ ] Implements evaluate app
   [ ] Implements posterior-decoding app
