--- a/TODO
+++ b/TODO
@@ -1,15 +1,16 @@
 [Refactoring]
+  [ ] Rename probabilitOf to simpleProbabilityOf
+  [ ] Fix code style
   [ ] Remove inhomogeneous() method
-  [ ] Implements bayes-classifier app
-  [ ] Implements evaluate app
-  [ ] Implements posterior-decoding app
-  [ ] Implements simulate app
-  [ ] Implements train app
-  [ ] Implements viterbi-decoding app
-  [ ] Implements ToPS-lang
+  [ ] Implement bayes-classifier app
+  [ ] Implement evaluate app
+  [ ] Implement posterior-decoding app
+  [ ] Implement simulate app
+  [ ] Implement train app
+  [ ] Implement viterbi-decoding app
+  [ ] Implement ToPS-lang
   [ ] Copy GHMM
   [ ] Copy Model selection techniques
-  [ ] Prefix sum array can't be parallelized. Should we use a decorator?
   [ ] Implement FixedSequenceAtPosition::prefix_sum_array
   [ ] Almost all functions are virtual. Verify if it is necessary
   [ ] Should ProfileHMM be a HMM?
@@ -17,9 +18,10 @@
   [ ] Check if band_den_bin is correct
   [ ] Declare overriding function 'override'
   [ ] Use unique_ptr as default pointer type
-  [ ] Add phased version of evaluate of IMC, PhasedIMC and MultipleSequentialModel
   [ ] Fix HMM's Baum-Welch algorithm
-  [ ] Refactor evaluate methods
+  [x] Add phased version of evaluate of IMC, PhasedIMC and MultipleSequentialModel
+  [x] Prefix sum array can't be parallelized. Should we use a decorator?
+  [x] Refactor evaluate methods
   [x] Should we add a "phased evaluate" method?
   [x] Copy DiscreteIIDModel::SmoothedHistogramStanke
   [x] Copy DiscreteIIDModel::trainSmoothedHistogramBurge
