--- a/TODO
+++ b/TODO
@@ -36,7 +36,7 @@
   [x] Add HMM's evaluate algorithm
 
 [Tests]
-  [ ] Test random functions like choose()
+  [ ] Test random functions like draw()
   [x] Test training methods of VLMC
   [x] Test training methods of IMC
   [x] Test evaluation using prefix sum arrays
